2006-02-20  Thomas Schwinge  <tschwinge@gnu.org>

	Remove unused and unsupported code.  Consult the file
	`DEVELOPMENT' for details.  Partly based on suggestions by
	Gianluca Guida <glguida@gmail.com>.

	* i386/bogus/hpp.h: Remove file.
	* i386/bogus/ul.h: Likewise.
	* i386/bogus/wd.h: Likewise.
	* i386/i386at/gpl/if_hpp.c: Likewise.
	* i386/i386at/gpl/if_ns.c: Likewise.
	* i386/i386at/gpl/if_nsreg.h: Likewise.
	* i386/i386at/gpl/if_ul.c: Likewise.
	* i386/i386at/gpl/if_wd.c: Likewise.
	* i386/i386at/autoconf.c: Don't include <hpp.h>, <ul.h> and <wd.h>
	anymore and adopt all users of NHPP, NUL and NWD as if they were always
	defined to `0'.
	* i386/i386at/conf.c: Likewise.

	* i386/bogus/at3c501.h: Remove file.
	* i386/i386at/if_3c501.c: Likewise.
	* i386/i386at/if_3c501.h: Likewise.
	* i386/i386at/autoconf.c: Don't include <at3c501.h> anymore and adopt
	all users of NAT3C501 as if it were always defined to `0'.
	* i386/i386at/conf.c: Likewise.

	* i386/bogus/ns8390.h: Remove file.
	* i386/i386at/ds8390.h: Likewise.
	* i386/i386at/if_3c503.h: Likewise.
	* i386/i386at/if_ns8390.c: Likewise.
	* i386/i386at/if_ns8390.h: Likewise.
	* i386/i386at/if_wd8003.h: Likewise.
	* i386/i386at/autoconf.c: Don't include <ns8390.h> anymore and adopt
	all users of NNS8390 as if it were always defined to `0'.
	* i386/i386at/conf.c: Likewise.

	* i386/bogus/ne.h: Remove file.
	* i386/i386at/if_ne.c: Likewise.
	* i386/i386at/if_nereg.h: Likewise.
	* i386/i386at/autoconf.c: Don't include <ne.h> anymore and adopt all
	users of NNE as if it were always defined to `0'.
	* i386/i386at/conf.c: Likewise.

	* i386/bogus/pc586.h: Remove file.
	* i386/i386at/i82586.h: Likewise.
	* i386/i386at/if_pc586.c: Likewise.
	* i386/i386at/if_pc586.h: Likewise.
	* i386/i386at/autoconf.c: Don't include <pc586.h> anymore and adopt all
	users of NPC586 as if it were always defined to `0'.
	* i386/i386at/conf.c: Likewise.

	* i386/bogus/fd.h: Remove file.
	* i386/i386at/fd.c: Likewise.